# RetroScope

./: README.md  emulator-MAGIC
abi/cpp/: Android.mk
bionic/libc/: Android.mk
bionic/linker/: dlfcn.cpp  linker.cpp
bootable/diskinstaller/: Android.mk  CleanSpec.mk  android_img_data_layout.conf  android_img_system_layout.conf  config.mk  init.rc  installer.c  installer.conf  installer.h  installer_img_layout.conf
cts/: Android.mk  CleanSpec.mk  CtsBuild.mk  CtsCoverage.mk  CtsTestCaseList.mk
cts/tests/: Android.mk  AndroidManifest.xml
dalvik/vm/: CheckJni.cpp  Dalvik.h  Debugger.cpp  Dvm.mk  Init.cpp  Jni.cpp  Sync.cpp
device/common/: clear-factory-images-variables.sh  generate-blob-lists.sh  generate-factory-images-common.sh  populate-new-device.sh
device/lge/mako/camera/: Android.mk  Makefile.am  QCameraHAL.cpp  QCameraHAL.h  QCameraHWI.cpp  QCameraHWI.h  QCameraHWI_Display.cpp  QCameraHWI_Display.h  QCameraHWI_Mem.cpp  QCameraHWI_Mem.h  QCameraHWI_Parm.cpp  QCameraHWI_Preview.cpp  QCameraHWI_Preview_7x27A.cpp  QCameraHWI_Record.cpp  QCameraHWI_Record_7x27A.cpp  QCameraHWI_Still.cpp  QCameraParameters.cpp  QCameraStream.cpp  QCameraStream.h  QCamera_Intf.h  QualcommCamera.cpp  QualcommCamera.h  QualcommCamera2.cpp  QualcommCameraHardware.cpp  QualcommCameraHardware.h  configure.ac
device/lge/mako/camera/QCamera/HAL/: Android.mk
device/lge/mako/camera/QCamera/HAL/core/: Android.mk
device/lge/mako/camera/QCamera/HAL/core/inc/: QCameraHWI.h  QCameraHWI_Mem.h  QCameraStream.h
device/lge/mako/camera/QCamera/HAL/core/src/: QCameraHAL.cpp  QCameraHWI.cpp  QCameraHWI_Mem.cpp  QCameraHWI_Parm.cpp  QCameraHWI_Preview.cpp  QCameraHWI_Record.cpp  QCameraHWI_Still.cpp  QCameraStream.cpp
device/lge/mako/camera/QCamera/HAL/wrapper/: QualcommCamera.cpp  QualcommCamera.h
device/lge/mako/camera/QCamera/stack/: Android.mk
device/lge/mako/camera/QCamera/stack/mm-camera-interface/: Android.mk
device/lge/mako/camera/QCamera/stack/mm-camera-interface/inc/: mm_camera.h  mm_camera_dbg.h  mm_camera_interface.h
device/lge/mako/camera/QCamera/stack/mm-camera-interface/src/: mm_camera.c  mm_camera_channel.c  mm_camera_data.c  mm_camera_helper.c  mm_camera_interface.c  mm_camera_sock.c  mm_camera_stream.c  mm_camera_thread.c
device/lge/mako/camera/QCamera/stack/mm-camera-test/: Android.mk
device/lge/mako/camera/QCamera/stack/mm-camera-test/inc/: mm_qcamera_app.h  mm_qcamera_main_menu.h  mm_qcamera_unit_test.h
device/lge/mako/camera/QCamera/stack/mm-camera-test/src/: mm_qcamera_app.c  mm_qcamera_display.c  mm_qcamera_dual_test.c  mm_qcamera_main_menu.c  mm_qcamera_preview.c  mm_qcamera_rdi.c  mm_qcamera_snapshot.c  mm_qcamera_unit_test.c  mm_qcamera_video.c
device/lge/mako/camera/QCamera/stack/mm-jpeg-interface/: Android.mk
device/lge/mako/camera/QCamera/stack/mm-jpeg-interface/inc/: mm_jpeg.h  mm_jpeg_dbg.h  mm_jpeg_interface.h
device/lge/mako/camera/QCamera/stack/mm-jpeg-interface/src/: mm_jpeg.c  mm_jpeg_interface.c  mm_jpeg_queue.c
device/lge/mako/camera/hdr/include/: morpho_easy_hdr.h  morpho_easy_hdr_ext.h  morpho_noise_reduction.h  morpho_noise_reduction_ext.h
device/lge/mako/camera/inc/: omx_debug.h  omx_jpeg_common.h  omx_jpeg_ext.h
device/lge/mako/camera/mm-camera-interface/: Android.mk  mm_camera.c  mm_camera.h  mm_camera_channel.c  mm_camera_dbg.h  mm_camera_helper.c  mm_camera_interface2.c  mm_camera_interface2.h  mm_camera_notify.c  mm_camera_poll_thread.c  mm_camera_sock.c  mm_camera_stream.c  mm_jpeg_encoder.c  mm_jpeg_encoder.h  mm_omx_jpeg_encoder.c  mm_omx_jpeg_encoder.h
device/sample/: CleanSpec.mk  README.txt
docs/source.android.com/: Android.mk  Doxyfile  DoxygenLayout.xml  README
frameworks/av/: CleanSpec.mk
frameworks/rs/: Android.mk  CleanSpec.mk  rs.h  rs.spec  rsAllocation.cpp  rsAllocation.h  rsCompatibilityLib.cpp  rsCompatibilityLib.h  rsComponent.h  rsContext.cpp  rsContext.h  rsCppUtils.cpp  rsCppUtils.h  rsDebugHelper.h  rsDevice.cpp  rsElement.cpp  rsElement.h  rsFifoSocket.cpp  rsFileA3D.cpp  rsFileA3D.h  rsFont.cpp  rsFont.h  rsGrallocConsumer.cpp  rsGrallocConsumer.h  rsMesh.cpp  rsObjectBase.cpp  rsObjectBase.h  rsProgram.cpp  rsProgram.h  rsProgramFragment.cpp  rsProgramVertex.cpp  rsRuntime.h  rsSampler.cpp  rsSampler.h  rsScript.cpp  rsScript.h  rsScriptC.cpp  rsScriptC_Lib.cpp  rsScriptC_LibGL.cpp  rsScriptGroup.cpp  (+10 more)
frameworks/uiautomator/: .classpath  .project  Android.mk  BuildConstants.java.in
frameworks/webview/: Android.mk
hardware/invensense/: Android.mk
hardware/libhardware/: Android.mk  hardware.c
hardware/libhardware_legacy/: Android.mk  CleanSpec.mk  qemu.h
hardware/qcom/audio/legacy/libalsa-intf/: Android.mk  Makefile.am  alsa_audio.h  alsa_mixer.c  alsa_pcm.c  alsa_ucm.c  alsaucm_test.c  amix.c  aplay.c  arec.c  msm8960_use_cases.h
hardware/ril/: CleanSpec.mk
libcore/: Android.mk  CaCerts.mk  CleanSpec.mk  Docs.mk  JavaLibrary.mk  NOTICE  NativeCode.mk  run-libcore-tests
libcore/benchmarks/: Android.mk
libnativehelper/: Android.mk
pdk/: README
pdk/util/: diff_products.py
prebuilts/devtools/: update_jars.sh
prebuilts/misc/: Android.mk
prebuilts/ndk/: Android.mk
prebuilts/runtime/: Android.mk
prebuilts/sdk/: Android.mk
prebuilts/tools/: Android.mk
sdk/: README.txt  changes.txt  release.md
sdk/adtproductbuild/: Android.mk  adt_eclipse_ide  build.properties  build.xml
sdk/annotations/: Android.mk
sdk/apkbuilder/: readme.txt
sdk/attribute_stats/: .project  README.txt
sdk/avdlauncher/: Android.mk  avdlauncher.c  (+1 more)
(+18254 files in other folders)
